--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,12 +27,10 @@ dist.dir=dist
 dist.jar=${dist.dir}/BookStore.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.jfoenix-8.0.10.jar=D:\\Bookstore\\jfoenix-8.0.10.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.MySQLDriver.classpath}:\
-    ${file.reference.jfoenix-8.0.10.jar}
+    ${libs.MySQLDriver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
