--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,13 +28,15 @@ dist.jar=${dist.dir}/BookStore.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.controlsfx-8.40.11.jar=C:\\Users\\khoul\\OneDrive\\Bureau\\controlsfx-8.40.11.jar
+file.reference.controlsfx-8.40.11.jar-1=D:\\Rached\\job\\1alt\\java\\controlsfx-8.40.11.jar
 file.reference.jfoenix-8.0.10.jar=D:\\Bookstore\\jfoenix-8.0.10.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
     ${file.reference.jfoenix-8.0.10.jar}:\
-    ${file.reference.controlsfx-8.40.11.jar}
+    ${file.reference.controlsfx-8.40.11.jar}:\
+    ${file.reference.controlsfx-8.40.11.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
