--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,11 +28,13 @@ dist.jar=${dist.dir}/BookStore.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.controlsfx-8.40.11.jar=C:\\Users\\khoul\\OneDrive\\Bureau\\controlsfx-8.40.11.jar
+file.reference.jfoenix-8.0.10.jar=C:\\Users\\Emna\\Downloads\\jfoenix-8.0.10.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
-    ${file.reference.controlsfx-8.40.11.jar}
+    ${file.reference.controlsfx-8.40.11.jar}:\
+    ${file.reference.jfoenix-8.0.10.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
