updated git ignore

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=BookStore
+application.vendor=khoul
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,14 +27,16 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/BookStore.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 file.reference.controlsfx-8.40.11.jar=C:\\Users\\khoul\\OneDrive\\Bureau\\controlsfx-8.40.11.jar
+file.reference.jfoenix-8.0.10.jar=C:\\Users\\khoul\\Downloads\\appsEXE\\jfoenix-8.0.10.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
-    ${file.reference.controlsfx-8.40.11.jar}
-# Space-separated list of extra javac options
+    ${file.reference.controlsfx-8.40.11.jar}:\
+    ${file.reference.jfoenix-8.0.10.jar}
 javac.compilerargs=
 javac.deprecation=false
 javac.external.vm=true
