C:/Program Files/Git/Hotfix Feature merge Book & User & Cart

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,14 +29,18 @@ dist.jar=${dist.dir}/BookStore.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.activation.jar=C:\\Users\\khoul\\Downloads\\appsEXE\\activation.jar
 file.reference.controlsfx-8.40.11.jar=C:\\Users\\khoul\\OneDrive\\Bureau\\controlsfx-8.40.11.jar
+file.reference.jBCrypt-0.4.1.jar=C:\\Users\\khoul\\Downloads\\appsEXE\\jBCrypt-0.4.1.jar
 file.reference.jfoenix-8.0.10.jar=C:\\Users\\khoul\\Downloads\\appsEXE\\jfoenix-8.0.10.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
     ${file.reference.controlsfx-8.40.11.jar}:\
-    ${file.reference.jfoenix-8.0.10.jar}
+    ${file.reference.jfoenix-8.0.10.jar}:\
+    ${file.reference.activation.jar}:\
+    ${file.reference.jBCrypt-0.4.1.jar}
 javac.compilerargs=
 javac.deprecation=false
 javac.external.vm=true
